--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
             <div class="wrap">
             <!--    <div class="search" action="/results" style="margin-top: 30px;" method="post"> -->
                 <form action="results" method="post">
-                    <input type="text" class="searchTerm" placeholder="Enter a date (yyyy-mm-dd) " name="date" style="padding: 0px; margin: 0px; height: 30px; width: 30%;"></input>
+                    <input type="text" class="searchTerm" placeholder="Enter a date (mm-dd-yyyy) " name="date" style="padding: 0px; margin: 0px; height: 30px; width: 30%;"></input>
                     <input type="submit" class="button" value="Search" aria-label="Search" style="font-weight:bold;color:red;width:60px;height:30px;""></input>
                 <form>
               
