--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
  
+{% if message %}
+<h4>{{message}}</h4>
+{% endif %}
+
 <head>
     <title>Crime Search</title>
  
@@ -10,23 +14,15 @@
 <body>
     <center>
         <div class = "vertical-center">
-            <div id="container">
-                <div id="fixedheader" style="margin-top: 100px;padding:0;"> <font size="+6"; face="Wild West">Crime Reports </font> <div> 
-            <div>
+            <div class="title">
+            <h1>Welcome to CrimeBuddy!</h1>
+        </div>
+        <ul>
+        <li><a href='/Lyftregister'>Login</a></li>
+        <li><a href='/Lyftregister'>Create an account</a> </li> 
+        <li><a href='/logout'>Logout</a></li>
+        <li><a href="/profile">My Profile </a></li>
 
-            <h2> Search crime by date</h2>
-            <!--<div id = "header" style="margin-top: 30px;"><font size="+2"> Search Crime by Date</font><div> -->
-
-            <div class="wrap">
-            <!--    <div class="search" action="/results" style="margin-top: 30px;" method="post"> -->
-                <form action="results" method="post">
-                    <input type="text" class="searchTerm" placeholder="Enter a date (mm-dd-yyyy) " name="date" style="padding: 0px; margin: 0px; height: 30px; width: 30%;"></input>
-                    <input type="submit" class="button" value="Search" aria-label="Search" style="font-weight:bold;color:red;width:60px;height:30px;""></input>
-                <form>
-              
-            <!--   </div> -->
-            <div>
-        <div>
 
 
  
