Add ability to request lyft

--- a/templates/Lyftsummary.html
+++ b/templates/Lyftsummary.html
@@ -27,8 +27,26 @@
                 </form>
             <div>
             <div class="CallLyft">
-                        <a href="https://ride.lyft.com">Call a Lyft</a>
-    </center>
+                    <form action="RequestLyft?type=lyft_line" method="post">
+			<input type="submit" class="button" value="Call a Lyft Line"> </input>
+		</form>
+		    <form action="RequestLyft?type=lyft" method="post">
+			<input type="submit" class="button" value="Call a Lyft"> </input>
+		</form>
+		    <form action="RequestLyft?type=lyft_plus" method="post">
+			<input type="submit" class="button" value="Call a Lyft Plus"> </input>
+		</form>
+		    <form action="RequestLyft?type=lyft_premier" method="post">
+			<input type="submit" class="button" value="Call a Lyft Premier"> </input>
+		</form>
+		    <form action="RequestLyft?type=lyft_lux" method="post">
+			<input type="submit" class="button" value="Call a Lyft Lux"> </input>
+		</form>
+		    <form action="RequestLyft?type=lyft_luxsuv" method="post">
+			<input type="submit" class="button" value="Call a Lyft Lux SUV"> </input>
+		</form>
+	    <div>
+	</center>
 
 </body>
 
