Updated templates folder, added static folder for CSS, updated app.py

--- a/templates/Lyftsummary.html
+++ b/templates/Lyftsummary.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
  
-<a href="/search">Make another search</a><br>
-<a href="/profile">View your profile</a>
+<a href="/main">Home</a>
  {% if message %}
 <h4>{{message}}</h4>
 {% endif %}
