--- a/templates/mbta.html
+++ b/templates/mbta.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
  
-<a href="/profile">View your Profile</a><br>
-<a href="/">Home</a>
+<a href="/main">Home</a>
 <head>
     <title>Find My Way Home</title>
 
@@ -14,8 +13,6 @@
             <div id="container">
                 <div id="fixedheader" style="margin-top: 100px;padding:0;"> <font size="+6"; face="Wild West">Find My Way Home </font> <div> 
             <div>
-            <a href='/search'>Make another search</a><br>
-            <a href='/Lyftsummary'>Check the Lyft prices in your area!</a>
 
             <h2> MBTA Results </h2>
 
