--- a/templates/register.html
+++ b/templates/register.html
@@ -1,31 +1,238 @@
+<!DOCTYPE html>
+<html>
 <head>
-    <title>Create an account!</title>
+  <link rel="stylesheet" href="../static/registration-styles.css">
 </head>
-{%if not supress%}
-<h1> Email already in use! Use another one or <a href="/login">login</a></h1>
-{% endif %}
-    <body>
-        <div class="title">
-            <h1>Enter your information below and complete your CrimeBuddy profile!</h1>
-        </div>
-        <div id="content">
-            <form method="post" action="{{ url_for('register_user') }}">
-                <label for="email">Enter your email:</label>
-                <input type="email" name="email" /><br />
-                <label for="password">Enter password:</label>
-                <input type="password" name="password" /><br />
-                <label for="first_name">Enter your first name:</label>
-                <input type="first_name" name="first_name" /><br />
-                <label for="last_name">Enter your last name:</label>
-                <input type="last_name" name="last_name" /><br />
-                <label for="dob">Enter your date of birth (YYYY-MM-DD):</label>
-                <input type="dob" name="dob" /><br />
-                <label for="gender">Gender (Male or Female):</label>
-                <input type="gender" name="gender" /><br />
-                <label for="address">What is your home address?:</label>
-                <input type="address" name="address" /><br />
-                <input type="submit" />
-            </form>
-         </div>
-    </body>
-<a href='/'>Home</a>
+<body>
+
+<div id="registration-box">
+  
+  <h1 align="center">Almost done!</h1>
+  <h2 align="center">Fill in your information to finish signing up.</h2>
+
+  <br>
+  
+  <form method="post" action="{{ url_for('register_user') }}">
+
+    <label for="first_name"></label>
+    <input type="first-name" name="first_name" placeholder="First Name" />
+
+    <label for="last_name"></label>
+    <input type="last-name" name="last_name" placeholder="Last Name" />
+
+    <label for="email"></label>
+    <input type="email" name="email" placeholder="Email" />
+
+    <label for="password"></label>
+    <input type="password" name="password" placeholder="Password" /> 
+
+    <label for="password2"></label>
+    <input type="password-2" name="password2" placeholder="Retype password" />
+
+    <h3>Gender</h3>
+    <label for="gender"></label>
+    <select name="gender">
+      <option value="male">Male</option>
+      <option value="female">Female</option>
+    </select>
+    </label>
+
+    <h3>Date of Birth</h3>
+    <label for="dob-month"></label>
+    <select class="dob-month" name="dob-month">
+      <option value="1">January</option>
+      <option value="2">February</option>
+      <option value="3">March</option>
+      <option value="4">April</option>
+      <option value="5">May</option>
+      <option value="6">June</option>
+      <option value="7">July</option>
+      <option value="8">August</option>
+      <option value="9">September</option>
+      <option value="10">October</option>
+      <option value="11">November</option>
+      <option value="12">December</option>
+    </select>
+
+    <label for="dob-day"></label>
+    <select class="dob-day" name="dob-day">
+      <option value="1">1</option>
+      <option value="2">2</option>
+      <option value="3">3</option>
+      <option value="4">4</option>
+      <option value="5">5</option>
+      <option value="6">6</option>
+      <option value="7">7</option>
+      <option value="8">8</option>
+      <option value="9">9</option>
+      <option value="10">10</option>
+      <option value="11">11</option>
+      <option value="12">12</option>
+      <option value="13">13</option>
+      <option value="14">14</option>
+      <option value="15">15</option>
+      <option value="16">16</option>
+      <option value="17">17</option>
+      <option value="18">18</option>
+      <option value="19">19</option>
+      <option value="20">20</option>
+      <option value="21">21</option>
+      <option value="22">22</option>
+      <option value="23">23</option>
+      <option value="24">24</option>
+      <option value="25">25</option>
+      <option value="26">26</option>
+      <option value="27">27</option>
+      <option value="28">28</option>
+      <option value="29">29</option>
+      <option value="30">30</option>
+      <option value="31">31</option>
+    </select>
+
+    <label for="dob-year"></label>
+    <select class="dob-year" name="dob-year">
+      <option value="2017">2017</option>
+      <option value="2016">2016</option>
+      <option value="2015">2015</option>
+      <option value="2014">2014</option>
+      <option value="2013">2013</option>
+      <option value="2012">2012</option>
+      <option value="2011">2011</option>
+      <option value="2010">2010</option>
+      <option value="2009">2009</option>
+      <option value="2008">2008</option>
+      <option value="2007">2007</option>
+      <option value="2006">2006</option>
+      <option value="2005">2005</option>
+      <option value="2004">2004</option>
+      <option value="2003">2003</option>
+      <option value="2002">2002</option>
+      <option value="2001">2001</option>
+      <option value="2000">2000</option>
+      <option value="1999">1999</option>
+      <option value="1998">1998</option>
+      <option value="1997">1997</option>
+      <option value="1996">1996</option>
+      <option value="1995">1995</option>
+      <option value="1994">1994</option>
+      <option value="1993">1993</option>
+      <option value="1992">1992</option>
+      <option value="1991">1991</option>
+      <option value="1990">1990</option>
+      <option value="1989">1989</option>
+      <option value="1988">1988</option>
+      <option value="1987">1987</option>
+      <option value="1986">1986</option>
+      <option value="1985">1985</option>
+      <option value="1984">1984</option>
+      <option value="1983">1983</option>
+      <option value="1982">1982</option>
+      <option value="1981">1981</option>
+      <option value="1980">1980</option>
+      <option value="1979">1979</option>
+      <option value="1978">1978</option>
+      <option value="1977">1977</option>
+      <option value="1976">1976</option>
+      <option value="1975">1975</option>
+      <option value="1974">1974</option>
+      <option value="1973">1973</option>
+      <option value="1972">1972</option>
+      <option value="1971">1971</option>
+      <option value="1970">1970</option>
+      <option value="1969">1969</option>
+      <option value="1968">1968</option>
+      <option value="1967">1967</option>
+      <option value="1966">1966</option>
+      <option value="1965">1965</option>
+      <option value="1964">1964</option>
+      <option value="1963">1963</option>
+      <option value="1962">1962</option>
+      <option value="1961">1961</option>
+      <option value="1960">1960</option>
+      <option value="1959">1959</option>
+      <option value="1958">1958</option>
+      <option value="1957">1957</option>
+      <option value="1956">1956</option>
+      <option value="1955">1955</option>
+      <option value="1954">1954</option>
+      <option value="1953">1953</option>
+      <option value="1952">1952</option>
+      <option value="1951">1951</option>
+      <option value="1950">1950</option>
+      <option value="1949">1949</option>
+      <option value="1948">1948</option>
+      <option value="1947">1947</option>
+      <option value="1946">1946</option>
+      <option value="1945">1945</option>
+      <option value="1944">1944</option>
+      <option value="1943">1943</option>
+      <option value="1942">1942</option>
+      <option value="1941">1941</option>
+      <option value="1940">1940</option>
+      <option value="1939">1939</option>
+      <option value="1938">1938</option>
+      <option value="1937">1937</option>
+      <option value="1936">1936</option>
+      <option value="1935">1935</option>
+      <option value="1934">1934</option>
+      <option value="1933">1933</option>
+      <option value="1932">1932</option>
+      <option value="1931">1931</option>
+      <option value="1930">1930</option>
+      <option value="1929">1929</option>
+      <option value="1928">1928</option>
+      <option value="1927">1927</option>
+      <option value="1926">1926</option>
+      <option value="1925">1925</option>
+      <option value="1924">1924</option>
+      <option value="1923">1923</option>
+      <option value="1922">1922</option>
+      <option value="1921">1921</option>
+      <option value="1920">1920</option>
+      <option value="1919">1919</option>
+      <option value="1918">1918</option>
+      <option value="1917">1917</option>
+      <option value="1916">1916</option>
+      <option value="1915">1915</option>
+      <option value="1914">1914</option>
+      <option value="1913">1913</option>
+      <option value="1912">1912</option>
+      <option value="1911">1911</option>
+      <option value="1910">1910</option>
+      <option value="1909">1909</option>
+      <option value="1908">1908</option>
+      <option value="1907">1907</option>
+      <option value="1906">1906</option>
+      <option value="1905">1905</option>
+      <option value="1904">1904</option>
+      <option value="1903">1903</option>
+      <option value="1902">1902</option>
+      <option value="1901">1901</option>
+      <option value="1900">1900</option>
+    </select>
+
+    <div style="clear:both;"></div>
+
+    <h3>Home Address</h3>
+
+    <label for="street"></label>
+    <input type="street" name="street" placeholder="Street" />
+
+    <label for="city"></label>
+    <input type="city" name="city" placeholder="City" />
+
+    <label for="state"></label>
+    <select class="state" name="state">
+      <option value="MA">MA</option>
+    </select>
+
+    <label for="zipcode"></label>
+    <input type="zipcode" name="zipcode" placeholder="ZIP" />
+
+    <input type="submit" id="signup_submit" value="Sign me up" />
+  </form>
+
+</div>
+
+</body>
+</html>
