--- a/static/main-styles.css
+++ b/static/main-styles.css
@@ -23,11 +23,60 @@ h3 {
   font-family: 'Roboto', sans-serif;
   font-weight: 400;
   font-size: 15px;
+  margin-left: 110px; 
+  margin-bottom:5px;
+}
+
+h4 {
+  color: #4c4c4c;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+  padding: 10%;
   margin-bottom:5px;
 }
 
 
-input[type="text"],
+.mbta-button{
+    background-color: #246703;
+    border: none;
+    color: white;
+    width: 250px;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+
+
+.lyft-button{
+    background-color: #ff00bf;
+    border: none;
+    color: white;
+    width: 250px;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+
+input [type="text"] {
+  display: block;
+  box-sizing: border-box;
+  margin-bottom: 20px;
+  margin-left: 40px;
+  padding: 4px;
+  width: 300px;
+  height: 50px;
+  border: 1px solid #AAA;
+  background-color: #f3f3f5
+}
+
 input[type="password"] {
   display: block;
   box-sizing: border-box;
@@ -44,7 +93,6 @@ input[type="password"] {
   background-color: #f3f3f5
 }
 
-input[type="text"]:focus,
 input[type="password"]:focus {
   border-bottom: 2px solid #00A99F;
   color: #00A99F;
@@ -85,6 +133,9 @@ ul {
   padding: .5em;
   margin: .5em;
 }
+
+
+
 
 #menuButton {
   float:left;
