--- a/templates/mbta.html
+++ b/templates/mbta.html
@@ -3,22 +3,26 @@
  
 <a href="/main">Home</a>
 <head>
-    <title>Find My Way Home</title>
+    <title>MBTA Results</title>
 
 
 </head>     
 <body>
     <center>
         <div class = "vertical-center">
-            <div id="container">
-                <div id="fixedheader" style="margin-top: 100px;padding:0;"> <font size="+6"; face="Wild West">Find My Way Home </font> <div> 
-            <div>
+
 
             <h2> MBTA Results </h2>
 
 
         	{% for your_list_element in mbta_info %}
-            	<p>{{ your_list_element }} </p>
+                {% if 'miles' in your_list_element %}
+                    <p><a href="http://www.google.com">{{ your_list_element }}</a> </p>
+                    <!--<a href="http://www.google.com">See on map</a> -->
+                {% else %}
+                    <p>{{ your_list_element }} </p>
+                {% endif %}
+
          	{% endfor %}
          <div>
 </div>
