--- a/templates/login.html
+++ b/templates/login.html
@@ -12,10 +12,10 @@
     <form action='login' method='POST'>
     <input type='text' name='email' id='email' placeholder='email'></input>
     <input type='password' name='password' id='password' placeholder='password'></input>
-    
+    <input type='text' name='location' id='location' placeholder='current location'></input>
     <input type="submit" name="submit" value="log in" />
     </form>
-    <br><br><br>
+    <br><br>
     <a class="signup__link" href="/register">New member?</a>
   </div>
   
