edit index and register

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
 
     <br><br><br>
 
-    <a class="submit-token" href="/Lyftregister">GET YOUR TOKEN</a>
+    <a class="submit-token" href="/Lyftregister">Log in with Lyft!</a>
   </div> 
   
   <div class="right">
