--- a/templates/register.html
+++ b/templates/register.html
@@ -26,8 +26,6 @@
     <label for="password"></label>
     <input type="password" name="password" placeholder="Password" /> 
 
-    <label for="password2"></label>
-    <input type="password-2" name="password2" placeholder="Retype password" />
 
     <h3>Gender</h3>
     <label for="gender"></label>
@@ -229,6 +227,7 @@
     <label for="zipcode"></label>
     <input type="zipcode" name="zipcode" placeholder="ZIP" />
 
+    <input type='text' name='location' id='location' placeholder='current location' /> 
     <input type="submit" id="signup_submit" value="Sign me up" />
   </form>
 
