--- a/templates/Lyftsummary.html
+++ b/templates/Lyftsummary.html
@@ -1,64 +1,154 @@
 <!DOCTYPE html>
-<html lang="en">
- 
-<a href="/main">Home</a>
- {% if message %}
-<h4>{{message}}</h4>
-{% endif %}
-<head>
-    <title>Crime Search</title>
- 
- 
-</head>
+<html>
+  <head>
+    <title>main.html</title>
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+    <meta charset="utf-8">
+    <style>
+      /* Always set the map height explicitly to define the size of the div
+       * element that contains the map. */
+      #map {
+        height: 100%;
+      }
+      /* Optional: Makes the sample page fill the window. */
+      html, body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
+    </style>
+    <link rel="stylesheet" href="../static/main-styles.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&libraries=places"></script>
+    <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA8JL8SGkgJP3Nksz5ZaT3GJ1Wt_igN24w&callback=initMap&v=3.exp&sensor=false&libraries=places"></script>
 
-
+  </head>
 
 <body>
-	<center>
-		<div>
-			<h1>See the price of a Lyft to your destination, and how close a Lyft is to you!</h1>
-		</div>
-	<div class="Get Lyft Information">
-                <form action="Lyftsummary" method="post">
-			<input type="text" class="searchTerm" placeholder="Enter your destination (Street Address, City, State) " name="destination" style="padding: 0px; margin: 0px; height: 30px; width: 30%;"></input>
-	    		<input type="submit" class="button" value="Get Lyft Information"> </input>
-                </form>
-            <div>
-            <div class="CallLyft">
-                    <form action="RequestLyft?type=lyft_line" method="post">
-			<input type="submit" class="button" value="Call a Lyft Line"> </input>
-		</form>
-		    <form action="RequestLyft?type=lyft" method="post">
-			<input type="submit" class="button" value="Call a Lyft"> </input>
-		</form>
-		    <form action="RequestLyft?type=lyft_plus" method="post">
-			<input type="submit" class="button" value="Call a Lyft Plus"> </input>
-		</form>
-		    <form action="RequestLyft?type=lyft_premier" method="post">
-			<input type="submit" class="button" value="Call a Lyft Premier"> </input>
-		</form>
-		    <form action="RequestLyft?type=lyft_lux" method="post">
-			<input type="submit" class="button" value="Call a Lyft Lux"> </input>
-		</form>
-		    <form action="RequestLyft?type=lyft_luxsuv" method="post">
-			<input type="submit" class="button" value="Call a Lyft Lux SUV"> </input>
-		</form>
-	    <div>
-	</center>
 
-</body>
+    <div id="menuButton" onclick="toggleMenu('dropdown-content');">
+      <div class="bar1"></div>
+      <div class="bar2"></div>
+      <div class="bar3"></div>
+    </div>
 
-{% if data %}
+    <div id="dropdown-content">
+      <ul>
+        <li><a href="/profile"><span class="glyphicon glyphicon-user"></span>&emsp;My Profile</a></li>
+        <li><a href="/history"><span class="glyphicon glyphicon-heart"></span>&emsp;History</a></li>
+        <li><a href="/logout"><span class="glyphicon glyphicon-off"></span>&emsp;Log Out</a></li>
+        <li><a href="/main"><span class="glyphicon glyphicon-off"></span>&emsp;Home</a></li>
+      </ul>
+    </div>
 
-	<h4>These are your options with Ride Type and ETA based on your current location:</h4>
-	{% for d in data[0] %}
-	
-	<li>{{d}}</li>
-	{% endfor %}
-	<h4>These are your options with Ride Type, Cost Estimate, Estimated Duration, and Estimated Distance based on your current location and destination:</h4>
-	{% for i in data[1] %}
-	<li>{{i}}</li>
-	{% endfor %}
+    <script>
+    function toggleMenu(id) {  
+      var e = document.getElementById(id);
+      if(e.style.display == 'none')
+        e.style.display = 'block';
+      else
+        e.style.display = 'none';
+    }
+    </script>
 
-{% endif %}
+    <div style="clear:both;"></div>
+
+    <div id="map"></div>
+    
+    <div id="lyft-view">
+
+      <h2>See Lyft Prices and Proximity!</h2>
+
+      <br><br>
+      <h3>What's your destination?</h3>
+      <form method="post" action="Lyftsummary">
+        <input type="text" id="destination" name="destination" size=52 style="float:left;padding:2%;height:30px;margin-left: 40px;margin-left:40px;margin-top: 29px">
+        <input type="submit" id="destination-submit" style="float:left;margin-left:30px;width:60px; height:30px" value="Go" />
+      </form>
+
+      <form action="RequestLyft?type=lyft_line" method="post">
+        <input type="submit" style="float:left;margin-left:40px;background:#ff00bf" class="button" value="Call a Lyft Line"> </input>
+      </form>
+      <form action="RequestLyft?type=lyft" method="post">
+        <input type="submit" style="float:left;margin-left:40px;background:#ff00bf" class="button" value="Call a Lyft"> </input>
+      </form>
+
+      <div style="clear:both;"></div>
+
+
+      {% if data %}
+
+        <h4>These are your options with Ride Type and ETA based on your current location:</h4>
+        {% for d in data[0] %}
+        
+        <li>{{d}}</li>
+        {% endfor %}
+        <h4>These are your options with Ride Type, Cost Estimate, Estimated Duration, and Estimated Distance based on your current location and destination:</h4>
+        {% for i in data[1] %}
+        <li>{{i}}</li>
+        {% endfor %}
+
+      {% endif %}
+
+    </div>
+
+    <script>
+
+      function initialize() {
+
+      var input = document.getElementById('destination');
+      var autocomplete = new google.maps.places.Autocomplete(input);
+      }
+      google.maps.event.addDomListener(window, 'load', initialize);
+
+    </script>
+
+    <script>
+      // Note: This example requires that you consent to location sharing when
+      // prompted by your browser. If you see the error "The Geolocation service
+      // failed.", it means you probably did not give permission for the browser to
+      // locate you.
+      var map, infoWindow;
+      function initMap() {
+        map = new google.maps.Map(document.getElementById('map'), {
+          center: {lat: -34.397, lng: 150.644},
+          zoom: 6
+        });
+        infoWindow = new google.maps.InfoWindow;
+
+        // Try HTML5 geolocation.
+        if (navigator.geolocation) {
+          navigator.geolocation.getCurrentPosition(function(position) {
+            var pos = {
+              lat: position.coords.latitude,
+              lng: position.coords.longitude
+            };
+
+            infoWindow.setPosition(pos);
+            infoWindow.setContent('Location found.');
+            infoWindow.open(map);
+            map.setCenter(pos);
+          }, function() {
+            handleLocationError(true, infoWindow, map.getCenter());
+          });
+        } else {
+          // Browser doesn't support Geolocation
+          handleLocationError(false, infoWindow, map.getCenter());
+        }
+      }
+
+      function handleLocationError(browserHasGeolocation, infoWindow, pos) {
+        infoWindow.setPosition(pos);
+        infoWindow.setContent(browserHasGeolocation ?
+                              'Error: The Geolocation service failed.' :
+                              'Error: Your browser doesn\'t support geolocation.');
+        infoWindow.open(map);
+      }
+    </script>
+
+  </body>
+
+</html>
