--- a/templates/mbta.html
+++ b/templates/mbta.html
@@ -1,30 +1,154 @@
 <!DOCTYPE html>
-<html lang="en">
- 
-<a href="/main">Home</a>
-<head>
-    <title>MBTA Results</title>
+<html>
+  <head>
+    <title>main.html</title>
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+    <meta charset="utf-8">
+    <style>
+      /* Always set the map height explicitly to define the size of the div
+       * element that contains the map. */
+      #map {
+        height: 100%;
+      }
+      /* Optional: Makes the sample page fill the window. */
+      html, body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
+    </style>
+    <link rel="stylesheet" href="../static/main-styles.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&libraries=places"></script>
+    <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA8JL8SGkgJP3Nksz5ZaT3GJ1Wt_igN24w&callback=initMap&v=3.exp&sensor=false&libraries=places"></script>
 
-</head>     
+  </head>
+
 <body>
-    <center>
-        <div class = "vertical-center">
+
+    <div id="menuButton" onclick="toggleMenu('dropdown-content');">
+      <div class="bar1"></div>
+      <div class="bar2"></div>
+      <div class="bar3"></div>
+    </div>
+
+    <div id="dropdown-content">
+      <ul>
+        <li><a href="/profile"><span class="glyphicon glyphicon-user"></span>&emsp;My Profile</a></li>
+        <li><a href="/history"><span class="glyphicon glyphicon-heart"></span>&emsp;History</a></li>
+        <li><a href="/logout"><span class="glyphicon glyphicon-off"></span>&emsp;Log Out</a></li>
+        <li><a href="/main"><span class="glyphicon glyphicon-off"></span>&emsp;Home</a></li>
+      </ul>
+    </div>
+
+    <script>
+    function toggleMenu(id) {  
+      var e = document.getElementById(id);
+      if(e.style.display == 'none')
+        e.style.display = 'block';
+      else
+        e.style.display = 'none';
+    }
+    </script>
+
+    <div style="clear:both;"></div>
+
+    <div id="map"></div>
+    
+    <div id="mbta-view">
+
+      <h2 style="margin-bottom:15px"> MBTA Results </h2>
+      {% for your_list_element in mbta_info %}
+            {% if 'miles' in your_list_element %}
+                <p style="margin-left:35px;margin-top:30px"><a href="http://www.google.com">{{ your_list_element }}</a> </p>
+            {% else %}
+                <p style="margin-left:60px;margin-bottom:10px">{{ your_list_element }} </p>
+            {% endif %}
+
+      {% endfor %}
+
+    </div>
+
+    <script>
+
+      function initialize() {
+
+      var input = document.getElementById('destination');
+      var autocomplete = new google.maps.places.Autocomplete(input);
+      }
+      google.maps.event.addDomListener(window, 'load', initialize);
+
+    </script>
+
+<!--     <script>
+      $('#DestinationForm').submit(function (){
+        return false;
+      });
+    </script> -->
+
+    <script>
+    function showMBTA() {  
+      if (document.getElementById('mbta-view').style.display == 'none') {
+            document.getElementById('display').style.display = 'none';
+            document.getElementById('mbta-view').style.display = 'block';
+      }
+    }
+
+    function showLyft() {  
+      if (document.getElementById('lyft-view').style.display == 'none') {
+            document.getElementById('display').style.display = 'none';
+            document.getElementById('lyft-view').style.display = 'block';
+      }
+    }
+    </script>
 
 
-            <h2> MBTA Results </h2>
+    <script>
+      // Note: This example requires that you consent to location sharing when
+      // prompted by your browser. If you see the error "The Geolocation service
+      // failed.", it means you probably did not give permission for the browser to
+      // locate you.
+      var map, infoWindow;
+      function initMap() {
+        map = new google.maps.Map(document.getElementById('map'), {
+          center: {lat: -34.397, lng: 150.644},
+          zoom: 6
+        });
+        infoWindow = new google.maps.InfoWindow;
 
+        // Try HTML5 geolocation.
+        if (navigator.geolocation) {
+          navigator.geolocation.getCurrentPosition(function(position) {
+            var pos = {
+              lat: position.coords.latitude,
+              lng: position.coords.longitude
+            };
 
-        	{% for your_list_element in mbta_info %}
-                {% if 'miles' in your_list_element %}
-                    <p><a href="http://www.google.com">{{ your_list_element }}</a> </p>
-                    <!--<a href="http://www.google.com">See on map</a> -->
-                {% else %}
-                    <p>{{ your_list_element }} </p>
-                {% endif %}
+            infoWindow.setPosition(pos);
+            infoWindow.setContent('Location found.');
+            infoWindow.open(map);
+            map.setCenter(pos);
+          }, function() {
+            handleLocationError(true, infoWindow, map.getCenter());
+          });
+        } else {
+          // Browser doesn't support Geolocation
+          handleLocationError(false, infoWindow, map.getCenter());
+        }
+      }
 
-         	{% endfor %}
-         <div>
-</div>
-</body>
+      function handleLocationError(browserHasGeolocation, infoWindow, pos) {
+        infoWindow.setPosition(pos);
+        infoWindow.setContent(browserHasGeolocation ?
+                              'Error: The Geolocation service failed.' :
+                              'Error: Your browser doesn\'t support geolocation.');
+        infoWindow.open(map);
+      }
+    </script>
+
+  </body>
+
 </html>
