--- a/templates/main.html
+++ b/templates/main.html
@@ -78,7 +78,7 @@
       <form action = "mbta" method="post">
         <input type="submit" style="float:left;margin-left:40px;background:#246703" value="See MBTA Options" />
       </form>
-      <form action = "Lyftsummary" method="post">
+      <form action = "Lyftsummary" method="get">
         <input type="submit" style="float:left;margin-left:40px;background:#ff00bf" value="See Lyft Options" />
       </form>
 
