--- a/templates/login.html
+++ b/templates/login.html
@@ -4,6 +4,7 @@
   <link rel="stylesheet" href="../static/styles.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+</head>
 <body>
 {% if message %}
   <h4>{{message}}</h4>
