--- a/templates/Lyftsummary.html
+++ b/templates/Lyftsummary.html
@@ -23,12 +23,10 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&libraries=places"></script>
-    <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA8JL8SGkgJP3Nksz5ZaT3GJ1Wt_igN24w&callback=initMap&v=3.exp&sensor=false&libraries=places"></script>
+    <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA8JL8SGkgJP3Nksz5ZaT3GJ1Wt_igN24w&callback=initMap&v=3.exp&sensor=false&libraries=places"></script>
 
   </head>
-{% if message %}
-  <h4>{{message}}</h4>
-  {% endif %}
+
 <body>
 
     <div id="menuButton" onclick="toggleMenu('dropdown-content');">
@@ -62,7 +60,7 @@
     
     <div id="lyft-view">
 
-      <h2>See Lyft Prices and Proximity!</h2>
+      <h2 style="margin-top:30px">See Lyft Prices and Proximity!</h2>
 
       <br><br>
       <h3>What's your destination?</h3>
@@ -79,18 +77,19 @@
       </form>
 
       <div style="clear:both;"></div>
-
+      <br><br>
 
       {% if data %}
 
-        <h4>These are your options with Ride Type and ETA based on your current location:</h4>
+        <h3 style="font-size:20px">Estimated ETA:</h3>
         {% for d in data[0] %}
         
-        <li>{{d}}</li>
+        <li style="list-style-type:square;margin-left:60px;margin-top:30px">{{d}}</li>
         {% endfor %}
-        <h4>These are your options with Ride Type, Cost Estimate, Estimated Duration, and Estimated Distance based on your current location and destination:</h4>
+        <br>
+        <h3 style="font-size:20px">Estimated ride cost duration, and distance:</h3>
         {% for i in data[1] %}
-        <li>{{i}}</li>
+        <li style="list-style-type:square;margin-left:60px;margin-top:30px">{{i}}</li>
         {% endfor %}
 
       {% endif %}
