--- a/static/main-styles.css
+++ b/static/main-styles.css
@@ -19,7 +19,7 @@ h1 {
 }
 
 h2 {
-  margin-left: 30px; 
+  margin-left: 40px; 
 }
 
 h3 {
@@ -35,13 +35,22 @@ h4 {
   color: #4c4c4c;
   font-family: 'Roboto', sans-serif;
   font-weight: 400;
-  padding: 10%;
+  padding-top: 10%;
   margin-bottom:5px;
 }
 
 p {
   color: #4c4c4c;
   font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+  margin-left:40px;
+  margin-bottom:5px;
+}
+
+li {
+  color: #4c4c4c;
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
   font-weight: 400;
   margin-left:40px;
   margin-bottom:5px;
@@ -64,7 +73,6 @@ p {
     margin: 4px 2px;
     cursor: pointer;
 }
-
 
 .lyft-button{
     background-color: #ff00bf;
@@ -228,12 +236,14 @@ ul {
   background: #f1f3f4;
   border-radius: 2px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
+  padding-right: 15px;
 }
 
 #lyft-view {
   float: left;
   margin: 10px;
   width:45%;
+  padding-right: 5%;
   height: 90%;
   background: #f1f3f4;
   border-radius: 2px;
