--- a/templates/main.html
+++ b/templates/main.html
@@ -23,7 +23,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&libraries=places"></script>
-    <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA8JL8SGkgJP3Nksz5ZaT3GJ1Wt_igN24w&callback=initMap&v=3.exp&sensor=false&libraries=places"></script>
+    <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA8JL8SGkgJP3Nksz5ZaT3GJ1Wt_igN24w&callback=initMap&v=3.exp&sensor=false&libraries=places"></script>
 
   </head>
   <body>
@@ -66,15 +66,23 @@
       <div style="clear:both;"></div>
 
       <h3>What's your destination?</h3>
-      <form id="DestinationForm" method="post" action="/Main">
+<!--       <form id="DestinationForm" method="post" action="/Main">
       <label for="destination"></label>
       <input type="text" id="destination" name="destination" size=55 style="float:left;height:30px;margin-left: 40px;margin-left:40px;margin-top: 29px">
       <input type="submit" id="destination-submit" style="float:left;margin-left:30px;width:40px; height:30px" value="Go" />
+      </form> -->
+
+      <form id="DestinationForm" method="get" action="mbta">
+      <label for="destination"></label>
+      <input type="text" id="destination" name="destination" size=55 style="float:left;height:30px;margin-left: 40px;margin-left:40px;margin-top: 29px">
+<!--       <input type="submit" id="destination-submit" style="float:left;margin-left:30px;width:40px; height:30px" value="Go" />
+ -->  <input type="submit" style="float:left;margin-left:40px;background:#246703" value="See MBTA Options" />
+      <input type="submit" formaction="Lyftsummary" style="float:left;margin-left:40px;background:#ff00bf" value="See Lyft Options" />
+
       </form>
 
-
       <div style="clear:both;"></div>
-      <br><br><br>
+      <br><br><br><!-- 
       <form action = "mbta" method="post">
         <input type="submit" style="float:left;margin-left:40px;background:#246703" value="See MBTA Options" />
       </form>
@@ -82,7 +90,7 @@
         <input type="submit" style="float:left;margin-left:40px;background:#ff00bf" value="See Lyft Options" />
       </form>
 
-      <div style="clear:both;"></div>
+      <div style="clear:both;"></div> -->
 
     </div>
 
@@ -134,7 +142,7 @@
       function initMap() {
         map = new google.maps.Map(document.getElementById('map'), {
           center: {lat: -34.397, lng: 150.644},
-          zoom: 6
+          zoom: 16
         });
         infoWindow = new google.maps.InfoWindow;
 
