--- a/templates/Lyftsummary.html
+++ b/templates/Lyftsummary.html
@@ -62,19 +62,12 @@
 
       <h2 style="margin-top:30px">See Lyft Prices and Proximity!</h2>
 
-      <br><br>
+      <br><br><!-- 
       <h3>What's your destination?</h3>
       <form method="post" action="Lyftsummary">
         <input type="text" id="destination" name="destination" size=52 style="float:left;padding:2%;height:30px;margin-left: 40px;margin-left:40px;margin-top: 29px">
         <input type="submit" id="destination-submit" style="float:left;margin-left:30px;width:60px; height:30px" value="Go" />
-      </form>
-
-      <form action="RequestLyft?type=lyft_line" method="post">
-        <input type="submit" style="float:left;margin-left:40px;background:#ff00bf" class="button" value="Call a Lyft Line"> </input>
-      </form>
-      <form action="RequestLyft?type=lyft" method="post">
-        <input type="submit" style="float:left;margin-left:40px;background:#ff00bf" class="button" value="Call a Lyft"> </input>
-      </form>
+      </form> -->
 
       <div style="clear:both;"></div>
       <br><br>
@@ -94,6 +87,12 @@
 
       {% endif %}
 
+      <form action="RequestLyft?type=lyft_line" method="post">
+        <input type="submit" style="float:left;margin-left:40px;background:#ff00bf" class="button" value="Call a Lyft Line"> </input>
+      </form>
+      <form action="RequestLyft?type=lyft" method="post">
+        <input type="submit" style="float:left;margin-left:40px;background:#ff00bf" class="button" value="Call a Lyft"> </input>
+      </form>
     </div>
 
     <script>
