--- a/templates/mbta.html
+++ b/templates/mbta.html
@@ -59,7 +59,7 @@
     <div id="map"></div>
     
     
-    <div id="mbta-view">
+    <div id="mbta-view" style="overflow:auto">
       <h2 style="margin-bottom:15px;margin-top:40px;margin-left:230px"> MBTA Results </h2>
       {% for your_list_element in mbta_info %}
             {% if 'miles' in your_list_element %}
