--- a/templates/Lyftsummary.html
+++ b/templates/Lyftsummary.html
@@ -26,7 +26,6 @@
     <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA8JL8SGkgJP3Nksz5ZaT3GJ1Wt_igN24w&callback=initMap&v=3.exp&sensor=false&libraries=places"></script>
 
   </head>
-
 <body>
 
     <div id="menuButton" onclick="toggleMenu('dropdown-content');">
@@ -39,8 +38,8 @@
       <ul>
         <li><a href="/profile"><span class="glyphicon glyphicon-user"></span>&emsp;My Profile</a></li>
         <li><a href="/history"><span class="glyphicon glyphicon-heart"></span>&emsp;History</a></li>
+        <li><a href="/main"><span class="glyphicon glyphicon-home"></span>&emsp;Home</a></li>
         <li><a href="/logout"><span class="glyphicon glyphicon-off"></span>&emsp;Log Out</a></li>
-        <li><a href="/main"><span class="glyphicon glyphicon-off"></span>&emsp;Home</a></li>
       </ul>
     </div>
 
