--- a/templates/main.html
+++ b/templates/main.html
@@ -38,8 +38,8 @@
       <ul>
         <li><a href="/profile"><span class="glyphicon glyphicon-user"></span>&emsp;My Profile</a></li>
         <li><a href="/history"><span class="glyphicon glyphicon-heart"></span>&emsp;History</a></li>
+        <li><a href="/main"><span class="glyphicon glyphicon-home"></span>&emsp;Home</a></li>
         <li><a href="/logout"><span class="glyphicon glyphicon-off"></span>&emsp;Log Out</a></li>
-        <li><a href="/main"><span class="glyphicon glyphicon-off"></span>&emsp;Home</a></li>
       </ul>
     </div>
 
