--- a/templates/mbta.html
+++ b/templates/mbta.html
@@ -39,8 +39,8 @@
       <ul>
         <li><a href="/profile"><span class="glyphicon glyphicon-user"></span>&emsp;My Profile</a></li>
         <li><a href="/history"><span class="glyphicon glyphicon-heart"></span>&emsp;History</a></li>
+        <li><a href="/main"><span class="glyphicon glyphicon-home"></span>&emsp;Home</a></li>
         <li><a href="/logout"><span class="glyphicon glyphicon-off"></span>&emsp;Log Out</a></li>
-        <li><a href="/main"><span class="glyphicon glyphicon-off"></span>&emsp;Home</a></li>
       </ul>
     </div>
 
@@ -60,7 +60,7 @@
     
     
     <div id="mbta-view" style="overflow:auto">
-      <h2 style="margin-bottom:15px;margin-top:40px;margin-left:230px"> MBTA Results </h2>
+      <h2 style="margin-bottom:15px;margin-top:40px;margin-left:70px"> MBTA Results </h2>
       {% for your_list_element in mbta_info %}
             {% if 'miles' in your_list_element %}
                 <li style="margin-left:35px;margin-top:30px"><a href="http://www.google.com">{{ your_list_element }}</a> </li>
